--- a/Structured Cabling Studio/Resources/Views/Project/ProjectInformation.uk.resx
+++ b/Structured Cabling Studio/Resources/Views/Project/ProjectInformation.uk.resx
@@ -151,7 +151,7 @@
   </data>
   <data name="Ninth paragraph - link to the Structured Cabling Studio repo" xml:space="preserve">
     <value>Після релізу SCS-Calc 2.0, в якості концептуального розвитку проекту, з'явилася ідея реалізаціі веб-застосунку. У березні 2023-го, на платформі .NET 7 ASP.NET Core, була начата робота над веб-проектом Structured Cabling Studio.&lt;br/&gt;
-Реліз проекту відбувся у квітні 2023-го. Успадкувавши концепцію від десктопних версій проекту, Structured Cabling Studio надає широкий функціонал розрахунку необхідного метражу кабелю для побудови СКС і отримання рекомендацій з підбору кабелю.&lt;br/&gt;
+Реліз проекту відбувся у травні 2023-го. Успадкувавши концепцію від десктопних версій проекту, Structured Cabling Studio надає широкий функціонал розрахунку необхідного метражу кабелю для побудови СКС і отримання рекомендацій з підбору кабелю.&lt;br/&gt;
 З кодом проекту Structured Cabling Studio можно ознайомитись на GitHub.</value>
   </data>
   <data name="Profile" xml:space="preserve">
