--- a/Structured Cabling Studio/Resources/Views/Project/ProjectInformation.ru.resx
+++ b/Structured Cabling Studio/Resources/Views/Project/ProjectInformation.ru.resx
@@ -162,7 +162,7 @@
 Что и было сделано в июне 2022-го - на языке C#, на платформе .NET 6 Windows Forms, была написана первая версия приложения с графическим интерфейсом пользователя. Приложение получило релизный индекс 1.0.</value>
   </data>
   <data name="Seventh paragraph" xml:space="preserve">
-    <value>Приложение SCS-Calc 2.0 стало совершенно новым, современным и функциональным приложением. Приложение было написано на более современной платформе разработки - .NET 7 WPF. В значительной степени был доработан функционал приложения, была добавлена возможность получения рекомендаций по побдору кабеля. Переход на новую платформу позволил реализовать совершенно новый, революционный дизайн.</value>
+    <value>Приложение SCS-Calc 2.0 стало совершенно новым, современным и функциональным приложением. Приложение было написано на более современной платформе разработки - .NET 7 WPF. В значительной степени был доработан функционал приложения, была добавлена возможность получения рекомендаций по подбору кабеля. Переход на новую платформу позволил реализовать совершенно новый, революционный дизайн.</value>
   </data>
   <data name="Sixth image description" xml:space="preserve">
     <value>SCS-Calc 2.0</value>
