--- a/Structured Cabling Studio/Resources/Views/Project/ProjectInformation.ru.resx
+++ b/Structured Cabling Studio/Resources/Views/Project/ProjectInformation.ru.resx
@@ -124,14 +124,14 @@
     <value>Электронная почта</value>
   </data>
   <data name="Eight paragraph &amp; link to the SCS-Calc 2.0 repo" xml:space="preserve">
-    <value>Релиз приложения SCS-Calc 2.0 состоялся в феврале 2023-го. По совместительству, приложение стало предметом курсовой работы по платформе .NET в Компьтерной Академии ШАГ г. Кривой Рог.&lt;br /&gt;
-Более подбробно ознакомиться с приложением можно на GitHub</value>
+    <value>Релиз приложения SCS-Calc 2.0 состоялся в феврале 2023-го. По совместительству, приложение стало предметом курсовой работы по платформе .NET в Компьютерной Академии ШАГ г. Кривой Рог.&lt;br /&gt;
+Более подробно ознакомиться с приложением можно на GitHub</value>
   </data>
   <data name="Fifth paragraph - link to the SCS-Calc 1.1 repo" xml:space="preserve">
     <value>Код приложения SCS-Calc 1.1 доступен на GitHub</value>
   </data>
   <data name="First paragraph" xml:space="preserve">
-    <value>В августе 2021-го, во время написания курсовой работы по предмету "Структурированные кабельные системы" в Компьтерной Академии ШАГ г. Кривой Рог, возникла необходимость в создании программного обеспечения для расчета необходимого для построения СКС метража кабеля. Была написана первая версия приложения - консольное приложение на языке C++, которое получило название SCS-Calc.</value>
+    <value>В августе 2021-го, во время написания курсовой работы по предмету "Структурированные кабельные системы" в Компьютерной Академии ШАГ г. Кривой Рог, возникла необходимость в создании программного обеспечения для расчёта необходимого для построения СКС метража кабеля. Была написана первая версия приложения - консольное приложение на языке C++, которое получило название SCS-Calc.</value>
   </data>
   <data name="First&amp;second image description" xml:space="preserve">
     <value>Первая, консольная версия приложения SCS-Calc</value>
