Work on the Project Information page is ongoing

--- a/Structured Cabling Studio/Resources/Views/Project/ProjectInformation.uk.resx
+++ b/Structured Cabling Studio/Resources/Views/Project/ProjectInformation.uk.resx
@@ -124,21 +124,21 @@
     <value>Електронна пошта</value>
   </data>
   <data name="Eight paragraph &amp; link to the SCS-Calc 2.0 repo" xml:space="preserve">
-    <value>Реліз додатку SCS-Calc 2.0 відбувся у лютому 2023-го. За сумісництвом, додаток став предметом курсової роботи з платформи .NET у Компьютерній Академіі ШАГ м. Кривий Ріг.&lt;br/&gt;
+    <value>Реліз додатку SCS-Calc 2.0 відбувся у лютому 2023-го. За сумісництвом, застосунок став предметом курсової роботи з платформи .NET у Комп'ютерній Академії ШАГ м. Кривий Ріг.&lt;br/&gt;
 Більш детально з додатком можно ознайомитись на GitHub</value>
   </data>
   <data name="Fifth paragraph - link to the SCS-Calc 1.1 repo" xml:space="preserve">
-    <value>Код додатку SCS-Calc 1.1 доступний на GitHub</value>
+    <value>Код застосунку SCS-Calc 1.1 доступний на GitHub</value>
   </data>
   <data name="First paragraph" xml:space="preserve">
-    <value>У серпні 2021-го, під час написання курсової роботи з предмету "Структуровані кабельні системи" в Компьютерній Академіі Шаг м. Кривий Ріг, з'явилася необхідність у створенні програмного забеспечення для розрахунку необхідного для побудови СКС метражу кабелю. Була написана перша версія додатку - консольний додаток на мові C++, який отримав назву SCS-Calc.</value>
+    <value>У серпні 2021-го, під час написання курсової роботи з предмету "Структуровані кабельні системи" у Комп'ютерній Академії ШАГ м.Кривий Ріг, з'явилася необхідність у створенні програмного забезпечення для розрахунку необхідного для побудови СКС метражу кабелю. Була написана перша версія застосунку - консольний додаток на мові C++, який отримав назву SCS-Calc.</value>
   </data>
   <data name="First&amp;second image description" xml:space="preserve">
     <value>Перша, консольна версія додатку SCS-Calc</value>
   </data>
   <data name="Fourth paragraph" xml:space="preserve">
-    <value>Проект мав розвиток. У серпні 2022-го була почата праця над версією 1.1. Одним з основних напрямків розробки будо створення меню додаткових параметрів, де користовач мав змогу налашитувати параметри розрахунку.&lt;br/&gt;
-При роботі над версією 1.1 почалася праця над новою архітектурною концепцією проекту. Для можливості переносу додатку на інші платорми розробки, була начата праця над створенням незалежної від типу додатку кросплатформенної бібліотеки, що містить логіку роботи додатку. Це зіграло значну роль у наступних версіях проекту, давши змогу переносити логічне ядро додатку на інші платформи.</value>
+    <value>Проект мав розвиток. У серпні 2022-го була почата праця над версією 1.1. Одним з основних напрямків розробки будо створення меню додаткових параметрів, де користувач мав змогу налаштувати параметри розрахунку.&lt;br/&gt;
+При роботі над версією 1.1 почалася праця над новою архітектурною концепцією проекту. Для можливості переносу додатку на інші платформи розробки, була начата праця над створенням незалежної від типу додатку кросплатформенної бібліотеки, що містить логіку роботи застосунку. Це зіграло значну роль у наступних версіях проекту, давши змогу переносити логічне ядро застосунку на інші платформи.</value>
   </data>
   <data name="Fourth&amp;fifth image description" xml:space="preserve">
     <value>SCS-Calc 1.1</value>
@@ -174,6 +174,6 @@
     <value>Застосунок SCS-Calc - десктопна версія</value>
   </data>
   <data name="Third paragraph - link to the SCS-Calc repo" xml:space="preserve">
-    <value>Більш детально ознайомитись з додатком SCS-Calc можно на GitHub</value>
+    <value>Більш детально ознайомитись з додатком SCS-Calc можна на GitHub</value>
   </data>
 </root>
