--- a/Structured Cabling Studio/Resources/Views/Calculation/Information.uk.resx
+++ b/Structured Cabling Studio/Resources/Views/Calculation/Information.uk.resx
@@ -125,11 +125,11 @@ d - кількість робочих місць;&lt;br/&gt;
 e - кількість портів на одне ребоче місце.</value>
   </data>
   <data name="First paragraph" xml:space="preserve">
-    <value>Застосунок Structured Cabling Studio призначений для розрахунку необхідного метражу інсталляційного кабелю для побудови структурованної кабельної системи (СКС) з урахуванням вимог міжнародного стандарту ISO/IEC 11801. На вибір дається можливість розрахувати необхідний метраж кабелю як з урахуванням метражу кабелю в 1-й кабельній катушці (бухті), так і без. При розрахунку необхідного метражу кабелю з урахуванням метража кабеля в 1-й бухті, розрахунок загальної необхідної кількості кабелю здійснюється з урахуванням кількості кабельних пробросів, які можно зробити з 1-єї бухти.&lt;br/&gt;
+    <value>Застосунок Structured Cabling Studio призначений для розрахунку необхідного метражу інсталяційного кабелю для побудови структурованої кабельної системи (СКС) з урахуванням вимог міжнародного стандарту ISO/IEC 11801. На вибір дається можливість розрахувати необхідний метраж кабелю як з урахуванням метражу кабелю в 1-й кабельній катушці (бухті), так і без. При розрахунку необхідного метражу кабелю з урахуванням метражу кабелю в 1-й бухті, розрахунок загальної необхідної кількості кабелю здійснюється з урахуванням кількості кабельних пробросів, які можна зробити з 1-єї бухти.&lt;br/&gt;
 Розрахунок необхідного метражу кабелю без урахування бухт здійснюється за формулою:</value>
   </data>
   <data name="Fourth paragraph" xml:space="preserve">
-    <value>Для отримання додаткової інформаціі про прект звернітся у розділ </value>
+    <value>Для отримання додаткової інформації про проект зверніться у розділ </value>
   </data>
   <data name="Project information link" xml:space="preserve">
     <value>Інформація про проект</value>
@@ -146,8 +146,8 @@ f - коефіцієнт технологічного резерву.</value>
     <value>Розрахунок необхідної кількості кабельних катушок (бухт) здійснюється за формулою:</value>
   </data>
   <data name="Third paragraph" xml:space="preserve">
-    <value>Розрахунок необхідного метража кабелю з урахуванням бухт, здійснюєтся, відповідно, отриманням добутку метражу кабеля в 1-й бухті и кількості бухт.&lt;br/&gt;
-Застосунок призначений для розрахунку метражу необхідного кабеля при проектуванні СКС, але може бути використаний при проектуванні кабульних систем іншого характеру, наприклад систем електричних кабелів.&lt;br/&gt;
-Ви також маєте змогу отримати рекомендаціі з підбору телекомунікаційного кабелю згідно з характеристиками розробляємої архітектури СКС. Для цього відмітьте на сторінці розрахунку усі необхідні параметри отримання рекомендацій у відповідності до характеристик розробляемої кабельної системи.</value>
+    <value>Розрахунок необхідного метражу кабелю з урахуванням бухт, здійснюється, відповідно, отриманням добутку метражу кабелю в 1-й бухті і кількості бухт.&lt;br/&gt;
+Застосунок призначений для розрахунку метражу необхідного кабеля при проектуванні СКС, але може бути використаний при проектуванні кабельних систем іншого характеру, наприклад систем електричних кабелів.&lt;br/&gt;
+Ви також маєте змогу отримати рекомендації з підбору телекомунікаційного кабелю згідно з характеристиками розробляємої архітектури СКС. Для цього відмітьте на сторінці розрахунку усі необхідні параметри отримання рекомендацій у відповідності до характеристик розробляемої кабельної системи.</value>
   </data>
 </root>
