--- a/Structured Cabling Studio/Resources/Views/Calculation/History.en.resx
+++ b/Structured Cabling Studio/Resources/Views/Calculation/History.en.resx
@@ -129,6 +129,9 @@
   <data name="HankQuantity" xml:space="preserve">
     <value>Necessary cable hank count:</value>
   </data>
+  <data name="History page title" xml:space="preserve">
+    <value>History</value>
+  </data>
   <data name="m" xml:space="preserve">
     <value>m</value>
   </data>
