--- a/Structured Cabling Studio/Resources/Views/Calculation/Calculate.ru.resx
+++ b/Structured Cabling Studio/Resources/Views/Calculation/Calculate.ru.resx
@@ -144,6 +144,9 @@
   <data name="Calculate" xml:space="preserve">
     <value>Рассчитать</value>
   </data>
+  <data name="Calculation page title" xml:space="preserve">
+    <value>Расчёт</value>
+  </data>
   <data name="Clean output block" xml:space="preserve">
     <value>Очистить блок вывода</value>
   </data>
