Edited the data logic error message logic

--- a/Structured Cabling Studio/Resources/Views/Shared/_DataLoadingErrorPartial.ru.resx
+++ b/Structured Cabling Studio/Resources/Views/Shared/_DataLoadingErrorPartial.ru.resx
@@ -120,4 +120,7 @@
   <data name="Data loading error" xml:space="preserve">
     <value>Ошибка загрузки данных. Пожалуйста, попробуйте еще раз</value>
   </data>
+  <data name="Reload" xml:space="preserve">
+    <value>Перезагрузить страницу</value>
+  </data>
 </root>
