--- a/Structured Cabling Studio/Resources/Views/Shared/_DataLoadingErrorPartial.en.resx
+++ b/Structured Cabling Studio/Resources/Views/Shared/_DataLoadingErrorPartial.en.resx
@@ -120,4 +120,7 @@
   <data name="Data loading error" xml:space="preserve">
     <value>Data loading error. Please try again</value>
   </data>
+  <data name="Reload" xml:space="preserve">
+    <value>Reload</value>
+  </data>
 </root>
